<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.screens.paymentdetails.PaymentDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_card_number" />

        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits=" 1234567890"
            android:maxLength="19"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_card_number_not_valid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/card_number_not_valid"
            android:gravity="center"
            android:textColor="@color/red"
            android:layout_marginTop="-6dp"
            app:layout_constraintStart_toStartOf="@+id/et_card_number"
            app:layout_constraintEnd_toEndOf="@+id/et_card_number"
            app:layout_constraintTop_toBottomOf="@+id/et_card_number"
            android:visibility="invisible"
            tools:visibility="visible"/>


        <TextView
            android:id="@+id/tv_exp_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration_date"
            app:layout_constraintTop_toBottomOf="@+id/et_card_number"
            app:layout_constraintStart_toStartOf="@+id/et_card_number"
            android:layout_marginTop="24dp"/>

        <LinearLayout
            android:id="@+id/ll_exp_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_exp_date"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/et_exp_date_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:maxLength="2"
                android:digits="1234567890"
                android:hint="@string/exp_date_month_hint"
                android:inputType="date"
                android:gravity="center"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_slash_label"
                android:textSize="24sp"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/et_exp_date_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:maxLength="2"
                android:digits="1234567890"
                android:hint="@string/exp_date_year_hint"
                android:inputType="date"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/tv_exp_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.4"
                android:importantForAutofill="no" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_exp_date_not_valid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/exp_date_not_valid"
            android:gravity="center"
            android:textColor="@color/red"
            android:layout_marginTop="-6dp"
            app:layout_constraintStart_toStartOf="@+id/ll_exp_date"
            app:layout_constraintEnd_toEndOf="@+id/ll_exp_date"
            app:layout_constraintTop_toBottomOf="@+id/ll_exp_date"
            android:visibility="invisible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cvv"
            app:layout_constraintTop_toTopOf="@+id/tv_exp_date"
            app:layout_constraintStart_toStartOf="@+id/et_cvv" />

        <EditText
            android:id="@+id/et_cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:digits="1234567890"
            android:maxLength="3"
            android:ems="3"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_exp_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ll_exp_date" />

        <TextView
            android:id="@+id/tv_cvv_not_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/cvv_not_valid"
            android:gravity="center"
            android:textColor="@color/red"
            android:layout_marginTop="-6dp"
            app:layout_constraintStart_toStartOf="@+id/et_cvv"
            app:layout_constraintEnd_toEndOf="@+id/et_cvv"
            app:layout_constraintTop_toBottomOf="@+id/et_cvv"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_card_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_holder"
            app:layout_constraintTop_toBottomOf="@+id/et_cvv"
            app:layout_constraintStart_toStartOf="@+id/et_card_number"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/et_card_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            app:layout_constraintTop_toBottomOf="@+id/et_card_holder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits=",.1234567890"
            android:hint="@string/amount_hint"
            android:gravity="end"
            android:maxLength="11"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro_sign"
            app:layout_constraintTop_toTopOf="@+id/et_amount"
            app:layout_constraintBottom_toBottomOf="@+id/et_amount"
            app:layout_constraintStart_toEndOf="@+id/et_amount" />

        <TextView
            android:id="@+id/tv_amount_not_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/amount_not_valid"
            android:gravity="center"
            android:textColor="@color/red"
            android:layout_marginTop="-6dp"
            app:layout_constraintStart_toStartOf="@+id/et_amount"
            app:layout_constraintEnd_toEndOf="@+id/et_amount"
            app:layout_constraintTop_toBottomOf="@+id/et_amount"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/btn_confirm_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_payment"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_amount_not_valid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>