<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.SecondFragment"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="24dp">

    <TextView
        android:id="@+id/tv_payment_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/payment_info"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_cardHolder_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_payment_info_label"
        android:text="@string/card_holder"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_cardHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_payment_info_label"
        tools:text="Rafael Costa"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_cardNumber_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cardHolder"
        android:text="@string/card_number"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_cardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cardHolder"
        tools:text="4111 1111 1111 1111"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cardNumber"
        android:text="@string/date"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cardNumber"
        tools:text="Apr 17, 2021 16:50:23"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_label"
        android:text="@string/amount"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_label"
        tools:text="1350.35€"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_refunds_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount_label"
        android:text="@string/refunds"
        android:textSize="18sp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tv_amount_to_refund_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_to_refund"
        app:layout_constraintTop_toBottomOf="@+id/tv_refunds_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/et_amount_to_refund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits=",.1234567890"
        android:hint="@string/amount_hint"
        android:gravity="end"
        android:maxLength="11"
        app:layout_constraintBottom_toBottomOf="@+id/tv_amount_to_refund_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_amount_to_refund_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_euro_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euro_sign"
        app:layout_constraintTop_toTopOf="@+id/et_amount_to_refund"
        app:layout_constraintBottom_toBottomOf="@+id/et_amount_to_refund"
        app:layout_constraintStart_toEndOf="@+id/et_amount_to_refund" />

    <TextView
        android:id="@+id/tv_amount_not_valid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/amount_not_valid"
        android:gravity="center"
        android:textColor="@color/red"
        android:layout_marginTop="-6dp"
        app:layout_constraintStart_toStartOf="@+id/et_amount_to_refund"
        app:layout_constraintEnd_toEndOf="@+id/et_amount_to_refund"
        app:layout_constraintBottom_toTopOf="@+id/et_amount_to_refund"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/btn_submit_refund"
        android:text="@string/refund"
        android:textAllCaps="true"
        android:elevation="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_amount_to_refund_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_amount_to_refund_label"/>

    <TextView
        android:id="@+id/tv_total_refunds_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount_to_refund_label"
        android:text="@string/total_refunds"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_refunded_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount_to_refund_label"
        tools:text="350.35€"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_total_not_refunded_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_refunded_total"
        android:text="@string/total_not_refunded"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_not_refunded_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_refunded_total"
        tools:text="350.35€"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_refunds_history_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_not_refunded_total"
        android:text="@string/history"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="12dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_refunds"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_refunds_history_label"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="6dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>